Added syllabus and learning values

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,14 +12,15 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav"></ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown{% if page.url == '/syllabus.html' or page.url == '/mac-specs.html' or page.url == '/mac-setup.html' or page.url == '/accounts.html' or page.url == '/pre-work.html' %} active{% endif %}">
+        <li class="dropdown{% if page.url == '/before/syllabus.html' or page.url == '/before/learning-software-development.html' or page.url == '/before/mac-specs.html' or page.url == '/before/mac-setup.html' or page.url == '/before/accounts.html' or page.url == '/before/pre-work.html' %} active{% endif %}">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Before <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <!-- <li{% if page.url == '/syllabus.html' %} class="active"{% endif %}><a href="/syllabus">Read the Syllabus</a></li> -->
-            <li{% if page.url == '/mac-specs.html' %} class="active"{% endif %}><a href="/mac-specs">Get a Mac</a></li>
-            <li{% if page.url == '/mac-setup.html' %} class="active"{% endif %}><a href="/mac-setup">Setup your Mac</a></li>
-            <li{% if page.url == '/accounts.html' %} class="active"{% endif %}><a href="/accounts">Register for accounts</a></li>
-            <li{% if page.url == '/pre-work.html' %} class="active"{% endif %}><a href="/pre-work">Do the pre-work</a></li>
+            <li{% if page.url == '/before/syllabus.html' %} class="active"{% endif %}><a href="/before/syllabus">Read the Syllabus</a></li>
+            <li{% if page.url == '/before/learning-values.html' %} class="active"{% endif %}><a href="/before/learning-values">Learning Values</a></li>
+            <li{% if page.url == '/before/mac-specs.html' %} class="active"{% endif %}><a href="/before/mac-specs">Get a Mac</a></li>
+            <li{% if page.url == '/before/mac-setup.html' %} class="active"{% endif %}><a href="/before/mac-setup">Setup your Mac</a></li>
+            <li{% if page.url == '/before/accounts.html' %} class="active"{% endif %}><a href="/before/accounts">Register for accounts</a></li>
+            <li{% if page.url == '/before/pre-work.html' %} class="active"{% endif %}><a href="/before/pre-work">Do the pre-work</a></li>
           </ul>
         </li>
       </ul>
